finish cleaning files

--- a/cleaned/51.html
+++ b/cleaned/51.html
@@ -181,36 +181,19 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3>
+          <h1>
             Matinee-Lesung über die Finnen und ihr Land
-          </h3>
+          </h1>
           <h3>
-            <b>von und mit Eberhard Apffelstaedt</b>
+            von und mit Eberhard Apffelstaedt
           </h3>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_166x266_Cover_finnenIII.jpg">
-                </td>
-                <td></td>
-                <td valign="top">
-                  <img src="resources/_wsb_166x269_Kuck_kuck.jpg">
-                </td>
-                <td></td>
-                <td>
-                  <img src="resources/_wsb_167x266_Mehr_Finnen.jpg">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <h3>
-            Am So, 07. Mai um 11.00 Uhr<a href="http://www.finnland.de/public/default.aspx?contentid=356582&nodeid=37052&culture=de-DE"><img src="resources/_wsb_95x82_suomifinland100-tunnus_sininen_rgb.jpg"></a>
-          </h3>
-          <table>
-            <tbody>
-              <tr>
-                <td>
+          <h2>Am So, 07. Mai 2017 um 11.00 Uhr</h2>
+          <img src="resources/_wsb_166x266_Cover_finnenIII.jpg">
+          <img src="resources/_wsb_166x269_Kuck_kuck.jpg">
+          <img src="resources/_wsb_167x266_Mehr_Finnen.jpg">
+
+            <a href="http://www.finnland.de/public/default.aspx?contentid=356582&nodeid=37052&culture=de-DE"><img src="resources/_wsb_95x82_suomifinland100-tunnus_sininen_rgb.jpg"></a>
+
                   <p>
                     Insgesamt drei amüsante und kurzweilige Bücher über die Finnen und ihr Land hat Eberhard Apffelstaedt inzwischen verfasst: „Finnen? Finnen!“, „Mehr Finnen? Mehr Finnen!“ und „Kuckuck! ruft der Elch“.
                   </p>
@@ -221,36 +204,31 @@
                     Während Apffelstaedt in den beiden ersten Bänden liebevoll-ironisch die besondere Spezies der Nordländer schildert, speziell und exemplarisch am Beispiel seines besten finnischen Freundes Matti, kommt Matti mit Ehefrau Päivi in „Kuckuck! ruft der Elch“ erstmalig nach Deutschland. Und der Autor nutzt diese Gelegenheit, mittels Mattis sehr individuellen Umgangsformen auch zahlreiche deutsche Schrullen humorvoll überzeichnend aufs Korn zu nehmen.
                   </p>
                   <p>
-                    <a href="http://www.finnbuch.de"><b>www.finnbuch.de</b></a>
+                    <a href="http://www.finnbuch.de">www.finnbuch.de</a>
                   </p>
-                </td>
-                <td valign="top"></td>
-                <td valign="top"></td>
-                <td valign="top"></td>
-                <td valign="top">
                   <img src="resources/_wsb_109x147_02_Eberhard+Apffelstaedt_10-2016.jpg">
-                </td>
-              </tr>
-            </tbody>
-          </table><b>Kulturhaus Süderelbe</b> Am Johannisland 2 21147 Hamburg Tel. 040-7967222 info@kulturhaus-suederelbe.de
+               <p><b>Kulturhaus Süderelbe</b><br>
+               Am Johannisland 2<br>
+               21147 Hamburg<br>
+               Tel.: 040-7967222<br>
+               E-Mail: <a href="mailto:info@kulturhaus-suederelbe.de">info@kulturhaus-suederelbe.de</a></p>
           <p>
             Im Rahmen der Veranstaltung spielt Eberhard Apffelstaedt
-          </p>
-          <p>
             am Klavier einige Stücke eines mit ihm befreundeten finnischen Musikers.
           </p>
           <p>
             Es verspricht ein fröhlicher Vormittag zu werden! In der Pause gibt es außer Kaffee und
-          </p>
-          <p>
-            Kuchen auch finnische Spezialitäten, wie "korvapuusti" und "karjalanpiirakka"<b>.</b>
+            Kuchen auch finnische Spezialitäten, wie "korvapuusti" und "karjalanpiirakka".
           </p>
           <p>
             <b>Der Eintritt ist frei.</b>
           </p>
           <p>
             Im Anschluss an die Lesung steht der Autor für Diskussion und zum Signieren seiner Bücher zur Verfügung.
-          </p>Eine Veranstaltung in Kooperation mit der Deutsch-Finnishen-Gesellschaft (DFG) mit freundlicher Unterstützung durch Botschaft von Finnland in Berlin und Suomi Seura r.y. <img src="resources/_wsb_89x31_dfg_logo_blau.jpg"> <img src="resources/_wsb_91x69_sponsorilogo.jpg">
+          </p>
+          <p>Eine Veranstaltung in Kooperation mit der Deutsch-Finnishen-Gesellschaft (DFG) mit freundlicher Unterstützung durch Botschaft von Finnland in Berlin und Suomi Seura r.y.</p>
+          <img src="resources/_wsb_89x31_dfg_logo_blau.jpg">
+          <img src="resources/_wsb_91x69_sponsorilogo.jpg">
         </td>
       </tr>
     </table>
