--- a/cleaned/52.html
+++ b/cleaned/52.html
@@ -181,19 +181,18 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+        <h1>Südlesetage</h1>
           <p>
             Wie im letzten Jahr begonnen, werden auch 2017 die <b>"Südlese-Tage"</b> durchgeführt.
           </p>
           <p>
             "Zu zweit liest es sich am Schönsten", sagen Dörte Ellerbrock und Dieter Wehrbrink, die sich wunderbar ergänzen, wenn es um Stimme und Sprachrhythmus geht.
-          </p><img src="resources/_wsb_309x194_schwarz-wei$C3$9F.jpg">
-          <p>
-            <b>Am 29.3.17 um 19 Uhr</b> lesen die beiden
           </p>
-          <p>
-            <b>"Jeder kämpft für sich allein" von Nina Dörmann</b>
-          </p>
-          <p>
+
+          <img src="resources/_wsb_309x194_schwarz-wei$C3$9F.jpg">
+
+          <h2>Am 29.3.17 um 19 Uhr</h2>
+          <p>lesen die beiden <b>"Jeder kämpft für sich allein" von Nina Dörmann</b>
             ein Zweipersonenstück über Vorurteile und Schwarz-Weiß-Denken.
           </p>
           <p>
