--- a/cleaned/54.html
+++ b/cleaned/54.html
@@ -181,30 +181,22 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/_wsb_493x696_PartyKunst_rdz.jpg">
+        <h1>PartyKunst im Haus der Jugend</h1>
+        <h2>am 18. Mai 2017</h2>
+        <img src="resources/_wsb_493x696_PartyKunst_rdz.jpg">
+
           <p>
             PartyKunst ist ein interkulturelles Kunstprojekt, das seit November 2016 in
-          </p>
-          <p>
             Zusammenarbeit mit dem Kulturhaus Süderelbe und der Stadtteilschule Süderelbe
-          </p>
-          <p>
             in Neugraben und Neuwiedenthal stattfindet. SchülerInnen aus Internationalen
-          </p>
-          <p>
             Vorbereitungsklassen und aus Berufsschulen arbeiten zusammen an Filmszenen,
-          </p>
-          <p>
             Fotos und eigenen Musikstücken, die am Donnerstag
           </p>
           <p>
-            <b>den 18. Mai 2017 ab 19 Uhr</b>
-          </p>
-          <p>
-            im Haus der Jugend Neuwiedenthal
-          </p>
-          <p>
-            Neumoorstück 3, 21147 Hamburg
+            <b>den 18. Mai 2017 ab 19 Uhr</b><br>
+            im Haus der Jugend Neuwiedenthal<br>
+            Neumoorstück 3<br>
+            21147 Hamburg
           </p>
           <p>
             in einer Disco-Installation zu erleben sind.
