--- a/cleaned/55.html
+++ b/cleaned/55.html
@@ -80,6 +80,8 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+        <h1>BGZ Sommerfest</h1>
+        <h2>am 23. Juni 2017</h2>
           <img src="resources/_wsb_392x553_BGZ_Sommer23.617.jpg">
           <p>
             Das diesjährige Sommerfest des Bildungs- und Gemeinschaftszentrums Süderelbe wartet nicht nur mit einem bunten Programm auf dem Schulhof und vor dem BGZ auf, sondern ist wieder für eine Überraschung gut:
