--- a/cleaned/index.html
+++ b/cleaned/index.html
@@ -80,140 +80,92 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <table>
-            <tbody>
-              <tr align="center">
-                <td valign="top">
-                  <img src="resources/KH_Luftballon_web.jpg">
-                </td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  Das Kulturhaus Süderelbe wird betrieben von dem gemeinnützigen Verein "Kulturhaus Süderelbe e.V." Es wird über die Stadtteilkulturmittel der Kulturbehörde Hamburg bzw. das Bezirksamt Harburg zum großen Teil finanziert; Projektmittel ergänzen die Finanzierung. Wer unsere Arbeit unterstützen möchte, kann mit dem jährlichen Beitrag von € 24,- Mitglied werden. In der Mitgliederversammlung unseres Vereins am 12. November 15 wurde der Vereinsvorstand wie folgt neu gewählt: 1. Vors.: Stephan Kaiser 2. Vors.: Hannelore Bobeck-Niculescu Schatzmeister: Winfried Wöhlke ____________________________________________________ Das Kulturhaus Süderelbe befindet sich direkt am S-Bahnhof Neugraben im ersten Stockwerk des <img src="resources/_wsb_154x81_BGZ_Logo_rgb_transparent_HG.jpg"> und ist über einen Fahrstuhl barrierefrei zu erreichen.
-                </td>
-              </tr>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  ______________________________________________________________________________ <b>1980 - 2017</b> 37 Jahre Kunst- und Kulturhaus Süderelbe e.V. <b>Kultur vor Ort</b> Kultur in all seinen Facetten - Sprache , Tanz, Musik, Theater und bildende Kunst sind nur ein Teil davon - begleiten die Menschheit seit ihrer Wiege. Sie gehört zum Menschen wie seine Haut. Durch unsere gesellschaftliche Entwicklung mit anderen Prioritäten geht, zum Teil unbemerkt, mehr und mehr unserer Fähigkeit zu Kreativität verloren. Um Kultur für jeden zugänglich zu machen und selbst zu gestalten, ist der gemeinnützige Verein "Kulturhaus Süderelbe e.V." entstanden. Vielleicht haben auch Sie Freude an aktiver Vereinsarbeit. Lernen Sie das Kulturhaus-Team und die vielen Möglichkeiten kennen, die die ehrenamtliche Tätigkeit in einem Verein bietet!
-                </td>
-              </tr>
-              <tr align="left">
-                <td valign="top">
-                  <b>Kulturhaus Süderelbe e.V. * Am Johannisland 2 * 21147 Hamburg</b> <b>info@kulturhaus-suederelbe.de * www.kulturhaus-suederelbe.de</b> <b>Telefon 040-796 72 22 Fax 040-7960048</b>
-                </td>
-              </tr>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-            </tbody>
-          </table>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  Der Kunst- und Kulturverein "Kulturhaus Süderelbe e.V." bietet ein umfangreiches Programm in den Bereichen bildende Kunst, Musik, Theater, Bewegung, Literatur und Sprache.
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <img src="resources/_wsb_108x113_Foto+Aliou+Badji-Kachel.jpg">
-                </td>
-                <td>
-                  <img src="resources/_wsb_115x115_KHS1+172-A2.jpg">
-                </td>
-                <td></td>
-                <td>
-                  <img src="resources/_wsb_114x115_Kachel+$C3$96lmalerei.jpg">
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  Kulturhausarbeit Das Kulturhaus Süderelbe bietet seinen Besuchern einen Freiraum im Alltag, in dem sie von Fachkräften künstlerisch angeleitet, begleitet und unterstützt werden. Unser Programm soll Lust machen, sich auf sehr unterschiedlichen Feldern kreativ auszuprobieren, künstlerische Fertigkeiten auszubilden und zu vertiefen. Die individuelle Förderung in der Gruppe bietet die Möglichkeit, Anregungen zu sammeln, sich auszutauschen und sich geborgen zu fühlen. Die daraus entstehenden Ideen und Kräfte wollen wir nutzen, Anstöße zur Gestaltung unseres lokalen Umfelds zu geben, künstlerisch-kreative Projekte im öffentlichen Raum anzustoßen und über das Interesse an künstlerischem Arbeiten die Menschen in der Region zum Mitwirken zu motivieren und ihre Identifikation mit dem Stadtteil zu stärken.
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Kooperationen Um diese Ziele zu erreichen, arbeiten wir eng mit unseren Nachbarn im Bildungs- und Gemeinschaftszentrum Süderelbe (BGZ Süderelbe) und anderen Kooperationspartnern zusammen.
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <b>Angebote unserer Mitglieder</b>
-                  <p>
-                    * Vereinigung Süderelbe e.V., Tel.: 70101728, www.vereinigung-suederelbe.de
-                  </p>
-                  <p>
-                    * MGV "Sängerlust Scheideholz" v. 1919 e.V., Tel.: 7016387, www.chorverband-hh.de
-                  </p>
-                  <p>
-                    * Ring für Heimattanz e.V., Tel.: 7016515, www.heimattanz.de
-                  </p>
-                  <p>
-                    * Verein "Plattdüütsch leevt", Tel.: 79751573, www.plattdueuetsch-leevt.de
-                  </p>
-                  <p>
-                    * Gemischter Chor Süderelbe "Die Evergreens", Tel.: 7015544,
-                  </p>
-                  <p>
-                    www.chorverband-hh.de
-                  </p>
-                  <p>
-                    * Bücherhalle Neugraben, Tel.: 7017622, www.buecherhallen.de/neugraben/
-                  </p>
-                  <p>
-                    * Kulturkreis Süderelbe e.V., : 70112001, www.kulturkreis-suederelbe.de
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Kinder und Jugendliche Kinder und Jugendliche können alle Musikangebote, die Kindermal- und Töpferschule, das Kindertanzen und, ab 12 Jahren, auch alle anderen Nachmittagskurse nutzen. Die Abrechnung ist über das Hamburger Bildungspaket möglich. Einzelheiten bitte im Büro erfragen. Gerne erarbeiten wir Angebote zu unseren Themen passend für Ihre Gruppen.
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Literatur Tel. 040 702 55 06 Im Striepensaal bietet das Kulturhaus jeden 1. Sonntag im Monat von 16-18 Uhr das Literaturcafe mit Dieter Wehrbrink kostenfrei an. Weitere Informationen s. unter: "Literaturcafe im Striepensaal"
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Kulturtage Süderelbe 2017 In bewährter Weise sollen die "Kulturtage Süderelbe" sowohl eine Plattform für erfahrene lokale Kulturveranstalter sein als auch Amateuren einen schützenden Rahmen bieten, um sich in der Öffentlichkeit mit einem Programmbeitrag zu präsentieren. Weitere Informationen s. "Kulturtage Süderelbe 2017"
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Das Kulturhaus Süderelbe wird gefördert von der Kulturbehörde Hamburg über das Bezirksamt Harburg. Mit einer Spende oder einer Mitgliedschaft im Verein können Sie unsere Arbeit unterstützen. Eine Spendenbescheinigung kann erstellt werden.
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-              </tr>
-              <tr>
-                <td valign="top">
-                  <h1>
-                    <a href="resources/Satzung_121115_Neu.pdf" target="_blank">Hier finden Sie die Satzung</a> <a href="http://www.kulturhaus-suederelbe.de/xml/wfxdirect/res;jsessionid=644BE08AAFE31835E67C9D417FC705C0.TCpfix100a?name=Satzung_121115_Neu.pdf" target="_blank">unseres Vereins</a>
-                  </h1>
-                </td>
-              </tr>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-              <tr>
-                <td valign="top"></td>
-              </tr>
-            </tbody>
-          </table>
+        <h1>Wir über uns</h1>
+        <img src="resources/KH_Luftballon_web.jpg">
+        <p>Das Kulturhaus Süderelbe wird betrieben von dem gemeinnützigen Verein "Kulturhaus Süderelbe e.V." Es wird über die Stadtteilkulturmittel der Kulturbehörde Hamburg bzw. das Bezirksamt Harburg zum großen Teil finanziert; Projektmittel ergänzen die Finanzierung.</p>
+
+        <p>Wer unsere Arbeit unterstützen möchte, kann mit dem jährlichen Beitrag von 24,- € Mitglied werden. In der Mitgliederversammlung unseres Vereins am 12. November 2015 wurde der Vereinsvorstand wie folgt neu gewählt:</p>
+
+        <dl>
+        <dt>1. Vorstand</dt>
+        <dd>Stephan Kaiser</dd>
+        <dt>2. Vorstand</dt>
+        <dd>Hannelore Bobeck-Niculescu</dd>
+        <dt>Schatzmeister</dt>
+        <dd>Winfried Wöhlke</dd>
+        </dl>
+
+        <hr>
+
+        <img src="resources/_wsb_154x81_BGZ_Logo_rgb_transparent_HG.jpg">
+
+        <p>Das Kulturhaus Süderelbe befindet sich direkt am S-Bahnhof Neugraben im ersten Stockwerk des BGZ Süderelbe und ist über einen Fahrstuhl barrierefrei zu erreichen.</p>
+
+        <hr>
+
+        <h2>1980 - 2017</h2>
+        <h3>37 Jahre Kunst- und Kulturhaus Süderelbe e.V.</h3>
+        <h4>Kultur vor Ort</h4>
+        <p>Kultur in all seinen Facetten - Sprache , Tanz, Musik, Theater und bildende Kunst sind nur ein Teil davon - begleiten die Menschheit seit ihrer Wiege. Sie gehört zum Menschen wie seine Haut. Durch unsere gesellschaftliche Entwicklung mit anderen Prioritäten geht, zum Teil unbemerkt, mehr und mehr unserer Fähigkeit zu Kreativität verloren.</p>
+        <p>Um Kultur für jeden zugänglich zu machen und selbst zu gestalten, ist der gemeinnützige Verein "Kulturhaus Süderelbe e.V." entstanden.</p>
+        <p>Vielleicht haben auch Sie Freude an aktiver Vereinsarbeit. Lernen Sie das Kulturhaus-Team und die vielen Möglichkeiten kennen, die die ehrenamtliche Tätigkeit in einem Verein bietet!</p>
+
+        <p>Kulturhaus Süderelbe e.V. | Am Johannisland 2 | 21147 Hamburg<br>
+        Tel.: 040 - 796 72 22<br>
+        Fax: 040 - 796 00 48<br>
+        Email: <a href="mailto:info@kulturhaus-suederelbe.de">info@kulturhaus-suederelbe.de</a><br>
+        Web: <a href="http://www.kulturhaus-suederelbe.de">kulturhaus-suederelbe.de</a>
+        </p>
+
+
+        <p>Der Kunst- und Kulturverein "Kulturhaus Süderelbe e.V." bietet ein umfangreiches Programm in den Bereichen bildende Kunst, Musik, Theater, Bewegung, Literatur und Sprache.</p>
+
+        <img src="resources/_wsb_108x113_Foto+Aliou+Badji-Kachel.jpg">
+        <img src="resources/_wsb_115x115_KHS1+172-A2.jpg">
+        <img src="resources/_wsb_114x115_Kachel+$C3$96lmalerei.jpg">
+
+        <h2>Kulturhausarbeit</h2>
+        <p>Das Kulturhaus Süderelbe bietet seinen Besuchern einen Freiraum im Alltag, in dem sie von Fachkräften künstlerisch angeleitet, begleitet und unterstützt werden. Unser Programm soll Lust machen, sich auf sehr unterschiedlichen Feldern kreativ auszuprobieren, künstlerische Fertigkeiten auszubilden und zu vertiefen. Die individuelle Förderung in der Gruppe bietet die Möglichkeit, Anregungen zu sammeln, sich auszutauschen und sich geborgen zu fühlen.</p>
+        <p>Die daraus entstehenden Ideen und Kräfte wollen wir nutzen, Anstöße zur Gestaltung unseres lokalen Umfelds zu geben, künstlerisch-kreative Projekte im öffentlichen Raum anzustoßen und über das Interesse an künstlerischem Arbeiten die Menschen in der Region zum Mitwirken zu motivieren und ihre Identifikation mit dem Stadtteil zu stärken.</p>
+        <h2>Kooperationen</h2>
+        <p>Um diese Ziele zu erreichen, arbeiten wir eng mit unseren Nachbarn im Bildungs- und Gemeinschaftszentrum Süderelbe (BGZ Süderelbe) und anderen Kooperationspartnern zusammen.</p>
+        <h2>Angebote unserer Mitglieder</h2>
+        <dl>
+          <dt>Vereinigung Süderelbe e.V.</dt>
+            <dd>040 - 70101728</dd>
+            <dd><a href="http://www.vereinigung-suederelbe.de">www.vereinigung-suederelbe.de</a></dd>
+          <dt>MGV "Sängerlust Scheideholz" v. 1919 e.V.</dt>
+            <dd>040 - 7016387</dd>
+            <dd><a href="http://www.chorverband-hh.de">www.chorverband-hh.de</a></dd>
+          <dt>Ring für Heimattanz e.V.</dt>
+            <dd>040 - 7016515</dd>
+            <dd><a href="http://www.heimattanz.de">www.heimattanz.de</a></dd>
+          <dt>Verein "Plattdüütsch leevt"</dt>
+            <dd>040 - 79751573</dd>
+            <dd><a href="http://www.plattdueuetsch-leevt.de">www.plattdueuetsch-leevt.de</a></dd>
+          <dt>Gemischter Chor Süderelbe "Die Evergreens"</dt>
+            <dd>040 - 7015544</dd>
+            <dd><a href="http://www.chorverband-hh.de">www.chorverband-hh.de</a></dd>
+          <dt>Bücherhalle Neugraben</dt>
+            <dd>040 - 7017622</dd>
+            <dd><a href="http://www.buecherhallen.de">www.buecherhallen.de</a>/neugraben/</dd>
+          <dt>Kulturkreis Süderelbe e.V.</dt>
+            <dd>040 - 70112001</dd>
+            <dd><a href="http://www.kulturkreis-suederelbe.de">www.kulturkreis-suederelbe.de</a></dd>
+          </p>
+        </dl>
+     <h2>Kinder und Jugendliche</h2>
+     <p>Kinder und Jugendliche können alle Musikangebote, die Kindermal- und Töpferschule, das Kindertanzen und, ab 12 Jahren, auch alle anderen Nachmittagskurse nutzen. Die Abrechnung ist über das Hamburger Bildungspaket möglich. Einzelheiten bitte im Büro erfragen. Gerne erarbeiten wir Angebote zu unseren Themen passend für Ihre Gruppen.</p>
+    <h2>Literatur</h2>
+    <p>Im Striepensaal bietet das Kulturhaus jeden 1. Sonntag im Monat von 16-18 Uhr das Literaturcafe mit Dieter Wehrbrink kostenfrei an.</p>
+    <p>Weitere Informationen s. unter: <a href="20.html">Literaturcafe im Striepensaal</a> und Tel. 040 702 55 06.</p>
+    <h2>Kulturtage Süderelbe 2017</h2>
+    <p>In bewährter Weise sollen die "Kulturtage Süderelbe" sowohl eine Plattform für erfahrene lokale Kulturveranstalter sein als auch Amateuren einen schützenden Rahmen bieten, um sich in der Öffentlichkeit mit einem Programmbeitrag zu präsentieren. Weitere Informationen s. <a href="17.html">Kulturtage Süderelbe 2017</a>.</p>
+
+    <p>Das Kulturhaus Süderelbe wird gefördert von der Kulturbehörde Hamburg über das Bezirksamt Harburg. Mit einer Spende oder einer Mitgliedschaft im Verein können Sie unsere Arbeit unterstützen. Eine Spendenbescheinigung kann erstellt werden.</p>
+
+    <p><a href="resources/Satzung_121115_Neu.pdf" target="_blank">Hier finden Sie die Satzung</a> <a href="http://www.kulturhaus-suederelbe.de/xml/wfxdirect/res;jsessionid=644BE08AAFE31835E67C9D417FC705C0.TCpfix100a?name=Satzung_121115_Neu.pdf" target="_blank">unseres Vereins</a></p>
+
         </td>
       </tr>
     </table>
