--- a/cleaned/53.html
+++ b/cleaned/53.html
@@ -181,26 +181,24 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+        <h1>Kulturhausfest</h1>
+        <h3>Jahresausstellung mit Musik</h3>
+        <h2>Sonntag, den 07.05.2017 von 14-19 Uhr</h2>
           <p>
-            <b><img src="resources/_wsb_213x362_Bettina_Dimitar_1.jpg"> <img src="resources/_wsb_249x364_Tag+der+offenen+T$C3$BCr+17.jpg"><img src="resources/_wsb_475x296_Sommerfest2012+075-30x20+$282$29.jpg"></b>
+            <img src="resources/_wsb_213x362_Bettina_Dimitar_1.jpg">
+            <img src="resources/_wsb_249x364_Tag+der+offenen+T$C3$BCr+17.jpg">
+            <img src="resources/_wsb_475x296_Sommerfest2012+075-30x20+$282$29.jpg">
           </p>
-          <p>
-            <b>Sonntag, den 7.5.17 von 14-19 Uhr</b>
-          </p>
-          <p>
-            <b>Jahresausstellung mit Musik</b>
-          </p>
+
           <p>
             <b>Das Kulturhaus Süderelbe präsentiert sich und kehrt das Innerste nach außen:</b>
           </p>
           <p>
-            <b>Am 7.Mai ´17 können Gäste bildende Kunst von den KünstlerInnen und ihren KursteilnehmerInnen genießen, der Musik von Bettina Sehlbach am Klavier und</b>
+            Am 7.Mai 2017 können Gäste bildende Kunst von den KünstlerInnen und ihren KursteilnehmerInnen genießen, der Musik von Bettina Sehlbach am Klavier und<
+            Kai Lüdemann an Bass und Gitarre und einem Überraschungsgast lauschen und seinem Seelchen mit Kaffee und Kuchen, Grill und Wein etwas Gutes tun. Die Kids des Tanztheaterprojektes von Wiebke Heinrich zeigen Ausschnitte ihres Könnens, nachdem sie so lange trainiert haben.
           </p>
           <p>
-            <b>Kai Lüdemann an Bass und Gitarre und einem Überraschungsgast lauschen und seinem Seelchen mit Kaffee und Kuchen, Grill und Wein etwas Gutes tun. Die Kids des Tanztheaterprojektes von Wiebke Heinrich zeigen Ausschnitte ihres Könnens, nachdem sie so lange trainiert haben.</b>
-          </p>
-          <p>
-            <b>Bisher haben Besucher auch immer Positives über die Gespräche mit den Kursleitern oder anderen Gästen berichtet, die sie lange nicht gesehen haben. Schauen wir mal, was sich noch so alles ergibt!</b>
+            Bisher haben Besucher auch immer Positives über die Gespräche mit den Kursleitern oder anderen Gästen berichtet, die sie lange nicht gesehen haben. Schauen wir mal, was sich noch so alles ergibt!
           </p>
         </td>
       </tr>
