--- a/cleaned/index.html
+++ b/cleaned/index.html
@@ -158,9 +158,9 @@
      <p>Kinder und Jugendliche können alle Musikangebote, die Kindermal- und Töpferschule, das Kindertanzen und, ab 12 Jahren, auch alle anderen Nachmittagskurse nutzen. Die Abrechnung ist über das Hamburger Bildungspaket möglich. Einzelheiten bitte im Büro erfragen. Gerne erarbeiten wir Angebote zu unseren Themen passend für Ihre Gruppen.</p>
     <h2>Literatur</h2>
     <p>Im Striepensaal bietet das Kulturhaus jeden 1. Sonntag im Monat von 16-18 Uhr das Literaturcafe mit Dieter Wehrbrink kostenfrei an.</p>
-    <p>Weitere Informationen s. unter: <a href="20.html">Literaturcafe im Striepensaal</a> und Tel. 040 702 55 06.</p>
+    <p>Weitere Informationen siehe <a href="20.html">Literaturcafe im Striepensaal</a> oder unter Tel. 040 702 55 06.</p>
     <h2>Kulturtage Süderelbe 2017</h2>
-    <p>In bewährter Weise sollen die "Kulturtage Süderelbe" sowohl eine Plattform für erfahrene lokale Kulturveranstalter sein als auch Amateuren einen schützenden Rahmen bieten, um sich in der Öffentlichkeit mit einem Programmbeitrag zu präsentieren. Weitere Informationen s. <a href="17.html">Kulturtage Süderelbe 2017</a>.</p>
+    <p>In bewährter Weise sollen die "Kulturtage Süderelbe" sowohl eine Plattform für erfahrene lokale Kulturveranstalter sein als auch Amateuren einen schützenden Rahmen bieten, um sich in der Öffentlichkeit mit einem Programmbeitrag zu präsentieren. Weitere Informationen siehe <a href="17.html">Kulturtage Süderelbe 2017</a>.</p>
 
     <p>Das Kulturhaus Süderelbe wird gefördert von der Kulturbehörde Hamburg über das Bezirksamt Harburg. Mit einer Spende oder einer Mitgliedschaft im Verein können Sie unsere Arbeit unterstützen. Eine Spendenbescheinigung kann erstellt werden.</p>
 
